# musica

./: Abot.py  BotAmino.py  README.md  alice.py  device.json  disabled_welcome_messages.txt  pyproject.toml  replit.nix  replit_zip_error_log.txt  sid.py  sid.txt  vc.json
.cache/replit/: __replit_disk_meta.json
.cache/replit/nix/: env.json
.upm/: store.json
amino/: acm.py  client.py  socket.py  sub_client.py
amino/lib/util/: exceptions.py  headers.py  helpers.py
utilities/amino_list/: CLASSOFLOVER389.json  DJ11.json  Englishlearningamino.json  FriendsFore3192.json  kworld001.json
